# Biopic_analysis_project_4

./: README.md  biogic_analysis.ipynb  biogic_analysis_config.yaml  biopic_analysis.ipynb  data_reconstruction_analysis.ipynb  pyproject.toml
src/biogic_analysis/: cli.py  data_summary.py  exploratory_data_analysis.py  inference.py
src/biopic_analysis/: __main__.py  building_model.py  data_summary.py  exploratory_data_analysis.py  inference.py
