[tool.poetry]
name = "airbnb_analysis"
version = "0.1.0"
description = "An analysis of diversity in biopics."
authors = ["Qing Dou <qdou@mail.yu.edu>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9.12"
numpy = "^1.21"
pandas = "^1.3"
seaborn = "^0.11"
matplotlib = "^3.4"
IPython = "^8.17.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"biogic_analysis" = ["*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 